feat: update styles

--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theme Manager Demo</title>
 
-    <!-- Main Theme Entry -->
-    <link id="theme-css" rel="stylesheet" href="./dist/theme-light.default.ltr.css" />
+    <link href="/src/scss/index.scss" rel="stylesheet">
 
-    <!-- Bootstrap Core -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" />
 </head>
 <body>
 <div class="container py-5">
