feat: impl build for palletes and templates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theme Manager Demo</title>
 
-    <link href="/src/scss/index.scss" rel="stylesheet">
+    <link id="theme-css" rel="stylesheet" href="./dist/theme-light.default.ltr.css" />
 
 </head>
 <body>
