feat: upload new build files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <div class="container py-5">
     <h1 class="mb-4">🎨 Theme Manager Demo</h1>
 
+    <div class="theme-light">
+        <div class="alert alert-primary">This is a primary alert</div>
+    </div>
+
     <div class="mb-3 d-flex gap-2">
         <button class="btn btn-outline-primary" id="toggleThemeBtn">Toggle Theme</button>
         <button class="btn btn-outline-secondary" id="toggleRtlBtn">Toggle RTL</button>
