--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link id="theme-css" rel="stylesheet" href="./dist/theme-light.default.ltr.css"/>
 </head>
-<body class="theme-light palette-default">
+<body class="theme-auto">
 <div class="container py-5">
     <h1 class="mb-4">🎨 Theme Manager Demo</h1>
 
@@ -41,8 +41,6 @@
         <button class="btn btn-danger">Danger</button>
         <button class="btn btn-warning">Warning</button>
         <button class="btn btn-info">Info</button>
-        <button class="btn btn-light">Light</button>
-        <button class="btn btn-dark">Dark</button>
     </div>
 
     <!-- ALERTS -->
@@ -72,7 +70,7 @@
 
     <!-- TABLE -->
     <h2>Table</h2>
-    <table class="table table-bordered">
+    <table class="table ">
         <thead>
         <tr>
             <th>#</th>
