fix: init theme service

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theme Manager Demo</title>
 
-    <link id="theme-css" rel="stylesheet" href="./dist/theme-light.default.ltr.css"/>
+<!--    <link id="theme-css" rel="stylesheet" href="./dist/theme-light.default.ltr.css"/>-->
 </head>
-<body class="theme-auto">
+<body>
 <div class="container py-5">
     <h1 class="mb-4">🎨 Theme Manager Demo</h1>
 
