fix: fix path at demo for core.js

--- a/demo/index.html
+++ b/demo/index.html
@@ -129,7 +129,7 @@
 
 <!-- JS -->
 <script type="module">
-    import * as ThemeManager from '../dist/core.js';
+    import * as ThemeManager from './core.js';
 
     window.addEventListener('DOMContentLoaded', () => {
         ThemeManager.initThemeSystem();
